Fixed tags having overflow text

--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -15,10 +15,10 @@ footer{
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 30px;
     background-color: #555;
     color: white;
-    padding:15px;
+    padding:3px;
 }
 input[type=text],input[type=password]{
     width:auto;
@@ -101,11 +101,26 @@ tr:nth-child(even){
        float: none;
     }
     .tagbox{
-    width:50%;
+       width:50%;
     }
     .textbox{
-    max-width:50%;
-    max-height:50%;
-    width:50%;
+       max-width:50%;
+       max-height:50%;
+       width:50%;
+    }
 }
+
+.wordwrap{
+    margin: 2px;
+    display: inline-block;
+    word-wrap: break-word;
+    white-space: pre-line;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    width: 80%;
+    height: auto;
+}
+
+.closeIcon{
+    float: right;
 }
